--- a/geonode/maps/templates/v2/map_metadata.html
+++ b/geonode/maps/templates/v2/map_metadata.html
@@ -39,15 +39,20 @@
                         </p>
                         <form class="form-horizontal" action="{{ map.get_absolute_url }}/metadata" method="POST">
                             {% if map.metadata_uploaded %}
-                            <div style="background-color: orange;">{% blocktrans %}Note: this map's orginal metadata was
+                            <div class="alert alert-warning" style="background-color: orange;">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                <strong>{% trans "Warning!" %}</strong> {% blocktrans %}Note: this map's orginal metadata was
                                 populated by importing a metadata XML file.
                                 GeoNode's metadata import supports a subset of ISO, FGDC, and Dublin Core metadata elements.
-                                Some of your original metadata may have been lost.{% endblocktrans %}</div>
+                                Some of your original metadata may have been lost.{% endblocktrans %}
+                            </div>
                             {% endif %}
         
                             {% if map_form.errors or category_form.errors %}
-                            <div style="background-color: pink">{% blocktrans %}Error updating metadata. Please check the
-                                following fields: {% endblocktrans %}
+                            <div class="alert alert-danger" style="background-color: pink">
+                                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                                <strong>{% trans "Error!" %}</strong> {% blocktrans %}Error updating metadata. Please
+                                check the following fields: {% endblocktrans %}
                                 <ul>
                                     {% for field in map_form %}
                                     {% if field.errors %}
