--- a/dashboard/templates/v2/dash_drought.html
+++ b/dashboard/templates/v2/dash_drought.html
@@ -306,7 +306,7 @@
 	                </div>
 	                <div class="x_content">
                 		<div class="col-md-12 col-xs-12 col-sm-8 print-no-pad">
-                			<div id="echart_bar_horizontal_stack_drought_pop" class="ch-size-fforecast"></div>
+                			<div id="echart_bar_horizontal_stack_drought_pop" class="ch-size-bar-drought"></div>
                 		</div>
                 	    <div class="col-md-12 col-xs-12 col-sm-4 center hidden">
                 	    	<div class="tile_count">
@@ -333,7 +333,7 @@
 	                </div>
 	                <div class="x_content">
                 		<div class="col-md-12 col-xs-12 col-sm-8 print-no-pad">
-                			<div id="echart_bar_horizontal_stack_drought_area" class="ch-size-fforecast"></div>
+                			<div id="echart_bar_horizontal_stack_drought_area" class="ch-size-bar-drought"></div>
                 		</div>
                 	    <div class="col-md-12 col-xs-12 col-sm-4 center hidden">
                 	    	<div class="tile_count">
