--- a/geonode/groups/templates/groups/activity.html
+++ b/geonode/groups/templates/groups/activity.html
@@ -1,4 +1,4 @@
-{% extends 'site_base.html' %}
+{% extends 'v2/site_base.html' %}
 {% load activity_tags social_tags i18n %}
 
 {% block extra_head %}
@@ -14,58 +14,74 @@
 {% endblock %}
 {% endcomment %}
 
-{% block body %}
-<div class="row">
-  <div class="col-md-12">
-    <h2 class="page-title">{%  trans "Activity Feed for"  %} <a href="{% url "group_detail" group.slug %}">{{ group.title }}</a></h2>
-    <div class="row">
-      <div class="col-md-12">
-        <ul class="nav nav-tabs">
-          <li class="active"><a href="#all" data-toggle="tab"><i class=""></i>{% trans "All" %}</a></li>
-          <li><a href="#layers" data-toggle="tab"><i class="fa fa-square-o rotate-45"></i> {% trans "Layers" %}</a></li>
-          <li><a href="#maps" data-toggle="tab"><i class="fa fa-map-marker"></i> {% trans "Maps" %}</a></li>
-          <li><a href="#comments" data-toggle="tab"><i class="fa fa-comment-o"></i> {% trans "Comments" %}</a></li>
-        </ul>
-    <div class="tab-content">
-      <article id="all" class="tab-pane active">
-        <ul class="no-style-list">
-        {% for action in action_list %}
-          {% activity_item action %}
-          {% empty %}
-          <p>{% trans "No actions yet" %}</p>
-        {% endfor %}
-        </ul>
-      </article>
-      <article id="layers" class="tab-pane">
-        <ul class="no-style-list">
-        {% for action in action_list_layers %}
-          {% activity_item action %}
-          {% empty %}
-          <p>{% trans "No actions yet" %}</p>
-        {% endfor %}
-        </ul>
-      </article>
-      <article id="maps" class="tab-pane">
-        <ul class="no-style-list">
-        {% for action in action_list_maps %}
-          {% activity_item action %}
-          {% empty %}
-          <p>{% trans "No actions yet" %}</p>
-        {% endfor %}
-        </ul>
-      </article>
-      <article id="comments" class="tab-pane">
-        <ul class="no-style-list">
-        {% for action in action_list_comments %}
-          {% activity_item action %}
-          {% empty %}
-          <p>{% trans "No actions yet" %}</p>
-        {% endfor %}
-        </ul>
-      </article>
-    </div>
-      </div>
-    </div>
-  </div>
-</div>
+{% block body_outer %}
+    <!-- Title -->
+    <section class="title">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>{%  trans "Activity Feed for"  %} <a href="{% url "group_detail" group.slug %}">{{ group.title }}</a></h1>
+                </div>
+                <div class="col-md-6">
+                    <ul class="breadcrumb pull-right">
+                        <li class="active">{% trans "Activity" %}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div>
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#all" data-toggle="tab"><i class=""></i>{% trans "All" %}</a></li>
+                    <li><a href="#layers" data-toggle="tab"><i class="fa fa-square-o rotate-45"></i>
+                            {% trans "Layers" %}</a></li>
+                    <li><a href="#maps" data-toggle="tab"><i class="fa fa-map-marker"></i> {% trans "Maps" %}</a></li>
+                    <li><a href="#comments" data-toggle="tab"><i class="fa fa-comment-o"></i> {% trans "Comments" %}</a>
+                    </li>
+                </ul>
+                <div class="tab-content">
+                    <article id="all" class="tab-pane active">
+                        <ul class="no-style-list">
+                            {% for action in action_list %}
+                            {% activity_item action %}
+                            {% empty %}
+                            <p>{% trans "No actions yet" %}</p>
+                            {% endfor %}
+                        </ul>
+                    </article>
+                    <article id="layers" class="tab-pane">
+                        <ul class="no-style-list">
+                            {% for action in action_list_layers %}
+                            {% activity_item action %}
+                            {% empty %}
+                            <p>{% trans "No actions yet" %}</p>
+                            {% endfor %}
+                        </ul>
+                    </article>
+                    <article id="maps" class="tab-pane">
+                        <ul class="no-style-list">
+                            {% for action in action_list_maps %}
+                            {% activity_item action %}
+                            {% empty %}
+                            <p>{% trans "No actions yet" %}</p>
+                            {% endfor %}
+                        </ul>
+                    </article>
+                    <article id="comments" class="tab-pane">
+                        <ul class="no-style-list">
+                            {% for action in action_list_comments %}
+                            {% activity_item action %}
+                            {% empty %}
+                            <p>{% trans "No actions yet" %}</p>
+                            {% endfor %}
+                        </ul>
+                    </article>
+                </div>
+            </div>
+        </div>
+    </section>
+
 {% endblock %}
