--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -225,6 +225,9 @@
     </nav>
     {% endblock header %}
 
+    {% block extra_loading %}
+    {% endblock extra_loading %}
+    
     <div class="alert alert-danger alert-dismissible" role="alert" id="ieflag" style="display:none">
       <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       <h1>You are using an outdated browser that is not supported by GeoNode.</h1>
