update the dari language in dashboard as well as statics pages

--- a/dashboard/templates/v2/dash_baseline.html
+++ b/dashboard/templates/v2/dash_baseline.html
@@ -57,7 +57,7 @@
                                     <a class="close-link"><i class="fa fa-close"></i></a>
                                 </li>
                                 <li>
-                                    <a href="http://18.196.236.51/maps/702/view" class="btn btn-primary" target="_blank">Visit Interactive Maps</a>
+                                    <a href="http://18.196.236.51/maps/702/view" class="btn btn-primary" target="_blank"> {% trans 'Visit Interactive Maps' %}</a>
                                 </li>
                             </ul>
                             <div class="clearfix"></div>
@@ -67,17 +67,17 @@
                                 <div class="col-md-3 col-sm-12 col-xs-12">
                                     <div id="layercontrol">
                                         <div class="form-group">
-                                            <label for="baselineOpt">Choose Layer :</label>
+                                            <label for="baselineOpt">{% trans 'Choose Layer :' %}</label>
                                             <select id="baselineOpt" class="form-control">
-                                                <option value="Population">Total Population</option>
-                                                <option value="Buildings">Total Building</option>
-                                                <option value="Area">Total Area</option>
-                                                <option value="hlt_total">Health Facilities</option>
-                                                <option value="road_total">Road Network</option>
+                                                <option value="Population">{% trans 'Total Population' %}</option>
+                                                <option value="Buildings">{% trans 'Total Building' %}</option>
+                                                <option value="Area">{% trans 'Total Area' %}</option>
+                                                <option value="hlt_total">{% trans 'Health Facilities' %}</option>
+                                                <option value="road_total">{% trans 'Road Network' %}</option>
                                             </select>
                                         </div>
                                         
-                                        <label for="slideRange">Range :</label>
+                                        <label for="slideRange">{% trans 'Range:' %}</label>
                                         <div id="slideRange">
                                             <div id="keypress"></div>
                                             <br>
@@ -91,7 +91,7 @@
                                             </div>
                                         </div>
 
-                                        <label for="themes">Pick a theme :</label>
+                                        <label for="themes">{% trans 'Pick a theme' %} :</label>
                                         <div id="themes">
                                             <button class="theme" data-btn="YlOrRd"></button>
                                             <button class="theme" data-btn="PuRd"></button>
