--- a/geonode/templates/v2/base.html
+++ b/geonode/templates/v2/base.html
@@ -254,11 +254,11 @@
                     <ul class="list-unstyled address">
                         <li>
                             <i class="fa fa-envelope"></i>
-                            <strong>Email: </strong> {{ THEME_ACCOUNT_CONTACT_EMAIL }}
+                            <strong>{% trans 'Email' %}: </strong> {{ THEME_ACCOUNT_CONTACT_EMAIL }}
                         </li>
                         <li>
                             <i class="fa fa-globe"></i>
-                            <strong>Website:</strong> www.andma.gov.af
+                            <strong>{% trans 'Website' %}:</strong> www.andma.gov.af
                         </li>
                     </ul>
                 </div>
@@ -275,7 +275,7 @@
             <div class="row">
                 <div class="col-md-5 cp">
                     &copy; 2020
-                    <a target="_blank" href="http://andma.gov.af/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "ANDMA" %}</a>. Powered By iMMAP
+                    <a target="_blank" href="http://andma.gov.af/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">{% trans "ANDMA" %}</a>.{% trans 'Powered By iMMAP'  %} 
                 </div>
                 <!--/Copyright-->
                 <div class="col-md-6">
@@ -284,16 +284,16 @@
                             <a href="mailto:{{ THEME_ACCOUNT_CONTACT_EMAIL }}"><i class="fa fa-envelope"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/channel/UCkd_swrFk9vN81s9SQ3fKgg"><i class="fa fa-youtube"></i></a>
+                            <a href="https://www.youtube.com/channel/UCCcfUk98-jO8Nxbt3qCPeyA"><i class="fa fa-youtube"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/immap.org/"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/ANDMAMedia/"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/immaper?lang=en"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/AfghanistanNDMA?lang=en"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/company/527383/"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://www.instagram.com/afghanistanndma/?hl=en"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
